--- a/travis.yml
+++ b/travis.yml
@@ -6,4 +6,4 @@ before_install:
   - docker build -t karanotts/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true karanotts/docker-react npm run test -- --coverage
+  - docker run karanotts/docker-react npm run test -- --coverage
