--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t docker-react -f Dockerfile.dev .
+  - docker build -t karanotts/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run docker-react npm run test -- --coverage
+  - docker run -r CI=true karanotts/docker-react npm run test -- --coverage
